# map2220

./: README.md
ep1/: .RData  .Rhistory
ep1/arrays/arad20/: low.txt  up.txt
ep1/arrays/clarky/: low.txt  up.txt
ep1/arrays/p51hroot/: low.txt  up.txt
ep1/files/: arad20.dat.txt  clarky.dat.txt
ep1/numerical/: #!:usr:bin:gnuplot  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.h  numerica.cbp  numerical  numerical.cbp  numericall.cbp  read.cpp
ep1/numerical/coordinates/: Coord.cpp  Coord.h  CoordList.cpp  CoordList.h
ep1/numerical/numericalAlgorithms/: SplineDiff.cpp  SplineDiff.h  spline.cpp  spline.h
ep1/scripts/: plot.R  readInput.py
ep1/splinePoints/: .RData  .Rhistory
ep1/splinePoints/clarky/: ContinuousHeight.txt  ContinuousSpline.txt  Derivate.txt  DottedHeight.txt  DottedSpline.txt
ep2/: CMakeLists.txt  SOR.cpp  SOR.h  gradient.cpp  gradient.h  main.cpp  main.h
ep2/Eigen/: SparseExtra
